Add Core Back End

--- a/package.json
+++ b/package.json
@@ -8,56 +8,70 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
-    "@nrwl/cli": "17.2.0",
-    "@nx/devkit": "17.2.0",
+    "@nx/devkit": "17.2.3",
+    "@prisma/client": "^5.7.0",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@swc/helpers": "~0.5.2",
     "@types/multer": "^1.4.11",
+    "@types/react-dnd": "^3.0.2",
     "axios": "^1.0.0",
+    "config": "^3.3.9",
+    "express": "^4.18.1",
+    "fast-glob": "^3.3.2",
     "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.0.2",
     "react-router-dom": "6.11.2",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nrwl/nest": "17.2.0",
-    "@nrwl/nx-plugin": "17.2.0",
-    "@nrwl/react": "17.2.0",
-    "@nrwl/workspace": "17.2.0",
-    "@nx/cypress": "17.2.0",
-    "@nx/eslint": "17.2.0",
-    "@nx/eslint-plugin": "17.2.0",
-    "@nx/jest": "17.2.0",
-    "@nx/js": "17.2.0",
-    "@nx/nest": "17.2.0",
-    "@nx/node": "17.2.0",
-    "@nx/plugin": "17.2.0",
-    "@nx/react": "17.2.0",
-    "@nx/web": "17.2.0",
-    "@nx/webpack": "17.2.0",
-    "@nx/workspace": "17.2.0",
+    "@nrwl/cli": "^15.9.3",
+    "@nrwl/nest": "17.2.3",
+    "@nrwl/nx-plugin": "17.2.3",
+    "@nrwl/react": "17.2.3",
+    "@nrwl/webpack": "^15.5.2",
+    "@nrwl/workspace": "17.2.3",
+    "@nx/cypress": "17.2.3",
+    "@nx/esbuild": "^17.2.3",
+    "@nx/eslint": "17.2.3",
+    "@nx/eslint-plugin": "17.2.3",
+    "@nx/express": "17.2.3",
+    "@nx/jest": "17.2.3",
+    "@nx/js": "17.2.3",
+    "@nx/nest": "17.2.3",
+    "@nx/node": "17.2.3",
+    "@nx/plugin": "17.2.3",
+    "@nx/react": "17.2.3",
+    "@nx/web": "17.2.3",
+    "@nx/webpack": "17.2.3",
+    "@nx/workspace": "17.2.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "@types/stack-trace": "0.0.33",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
@@ -68,12 +82,15 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "17.2.0",
+    "nx": "17.2.3",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.6.2",
+    "prisma": "^5.7.0",
     "react-refresh": "^0.10.0",
+    "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2",
+    "typescript": "^5.2.2",
     "url-loader": "^4.1.1"
   },
   "browser": {
