Add SupaBase Connection And Type ORM migrations logic And Auth + Create User Skeleton Logic

--- a/packages/core-backend/tsconfig.app.json
+++ b/packages/core-backend/tsconfig.app.json
@@ -36,7 +36,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "module": "commonjs",
-    "types": ["node"]
+    "types": ["node"],
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
   "include": ["src/**/*.ts"]
