--- a/packages/core-backend/package.json
+++ b/packages/core-backend/package.json
@@ -8,7 +8,8 @@
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
     "start": "nodemon dist/packages/core-backend/src/main.js",
-    "test": "jest --runInBand --bail --detectOpenHandles --forceExit"
+    "test": "jest --runInBand --bail --detectOpenHandles --forceExit",
+    "typeorm": "typeorm-ts-node-esm -d dist/packages/core-backend/src/data-source.js"
   },
   "keywords": [
     "core",
@@ -19,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "passport-custom": "^1.1.1",
+    "ts-node": "^10.9.2",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
