--- a/packages/core-backend/package.json
+++ b/packages/core-backend/package.json
@@ -19,6 +19,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "algoliasearch": "^4.22.1",
     "passport-custom": "^1.1.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.17"
