Complete Skeleton Indexing Pipeline Architecture that Indexes the Core Backend Data - Users in this Instance

--- a/packages/core-backend/.env
+++ b/packages/core-backend/.env
@@ -8,4 +8,12 @@ SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZ
 ALGOLIA_APP_ID="RVLF07V6DC"
 ALGOLIA_ADMIN_API_KEY="817ce92f9370ffff99b73da873ca8fcc"
 
+AZURE_SEARCH_API_KEY="PZ2ZcG2IcY342rdqjoHQNg57kdt4KIUz5S4A9RV02OAzSeBpxAAo"
+AZURE_SEARCH_ENDPOINT="https://ocular.search.windows.net"
+
 REDIS_URL="redis://default:RNcPQjtCN9CEYRGfDXtLWkSZjyUCVV0P@redis-17429.c238.us-central1-2.gce.cloud.redislabs.com:17429"
+
+PINECONE_API_KEY="52a01c22-ed9b-44b2-ae07-19c36b6126ff"
+PINECONE_INDEX="semantic-search"
+PINECONE_CLOUD="aws"
+PINECONE_REGION="us-west-2"
