--- a/packages/core-backend/package.json
+++ b/packages/core-backend/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "@azure/search-documents": "^12.0.0",
+    "@ocular-ai/types": "file:../types",
     "@pinecone-database/pinecone": "^2.0.1",
     "algoliasearch": "^4.22.1",
     "passport-custom": "^1.1.1",
