--- a/packages/core-backend/package.json
+++ b/packages/core-backend/package.json
@@ -1,32 +1,35 @@
 {
   "name": "@ocular-ai/core-backend",
   "version": "1.0.0",
-  "description": "Description of your core-backend project",
-  "main": "dist/app.js",
+  "description": "Ocular Core Backend",
+  "main": "dist/core-backend/src/main.js",
   "scripts": {
     "watch": "tsc --build --watch",
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
-    "start": "npm run build && nodemon dist/packages/core-backend/src/main.js",
+    "start": "npm run build && nodemon dist/core-backend/src/main.js",
     "test": "jest --runInBand --bail --detectOpenHandles --forceExit",
-    "typeorm": "npm run build && typeorm-ts-node-esm -d dist/packages/core-backend/src/data-source.js"
+    "typeorm": "npm run build && typeorm-ts-node-esm -d dist/core-backend/src/data-source.js"
   },
   "keywords": [
     "core",
     "backend",
     "nx"
   ],
-  "author": "Your Name",
+  "author": "Louis Luxa Murerwa",
   "license": "MIT",
   "dependencies": {
     "@azure/search-documents": "^12.0.0",
     "@ocular-ai/modules-sdk": "file:../modules-sdk",
     "@ocular-ai/types": "file:../types",
+    "@ocular-ai/utils": "file:../utils",
     "@pinecone-database/pinecone": "^2.0.1",
     "algoliasearch": "^4.22.1",
+    "glob": "^10.3.10",
+    "knex": "^3.1.0",
     "passport-custom": "^1.1.1",
     "ts-node": "^10.9.2",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
