--- a/packages/core-backend/tsconfig.app.json
+++ b/packages/core-backend/tsconfig.app.json
@@ -1,43 +1,30 @@
-// {
-//   "extends": "./tsconfig.json",
-//   "compilerOptions": {
-//     "lib": ["es5", "es6", "es2019"],
-//     "target": "es5",
-//     "outDir": "./dist",
-//     "esModuleInterop": true,
-//     "declaration": true,
-//     "module": "ES2015",
-//     "moduleResolution": "Bundler",
-//     "emitDecoratorMetadata": true,
-//     "experimentalDecorators": true,
-//     "sourceMap": true,
-//     "noImplicitReturns": true,
-//     "strictNullChecks": true,
-//     "strictFunctionTypes": true,
-//     "noImplicitThis": true,
-//     "skipLibCheck": true,
-//     "downlevelIteration": true, // to use ES5 specific tooling
-//     "resolveJsonModule": true,
-//     // "paths": {
-//     //   "@autoflow-ai/core": ["../packages/libs/core/src/index.ts"],
-//     // }
-//   },
-//   "include": ["src/**/*.ts"],
-//   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts",    
-//   "./dist/**/*",
-//   "./src/**/__tests__",
-//   "./src/**/__mocks__",
-//   "./src/**/__fixtures__",
-//   "node_modules"],
-// }
-
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "lib": ["es5", "es6", "es2019"],
+    "target": "es5",
+    "outDir": "./dist",
+    "esModuleInterop": true,
+    "declaration": true,
     "module": "commonjs",
-    "types": ["node"],
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    // "sourceMap": true,
+    // "noImplicitReturns": true,
+    // "strictNullChecks": true,
+    // "strictFunctionTypes": true,
+    // "noImplicitThis": true,
+    // "allowJs": true,
+    "skipLibCheck": true,
+    // "downlevelIteration": true, // to use ES5 specific tooling
+    // "resolveJsonModule": true
   },
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["./src/**/*", "index.d.ts", "../utils/src/autoflow-container.ts", "../utils/src/common/errors.ts", "../utils/src/common/container.ts", "../utils/src/is-object.ts"],
+  "exclude": [
+    "./dist/**/*",
+    "./src/**/__tests__",
+    "./src/**/__mocks__",
+    "./src/**/__fixtures__",
+    "node_modules"
+  ]
 }
