--- a/packages/core-backend/tsconfig.app.json
+++ b/packages/core-backend/tsconfig.app.json
@@ -4,7 +4,7 @@
     "target": "es5",
     "outDir": "./dist",
     "esModuleInterop": true,
-    "declaration": true,
+    // "declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
@@ -19,7 +19,7 @@
     // "downlevelIteration": true, // to use ES5 specific tooling
     // "resolveJsonModule": true
   },
-  "include": ["./src/**/*", "index.d.ts", "../utils/src/autoflow-container.ts", "../utils/src/common/errors.ts", "../utils/src/common/container.ts", "../utils/src/is-object.ts"],
+  "include": ["./src/**/*", "index.d.ts", "../utils/src/autoflow-container.ts", "../utils/src/common/errors.ts", "../utils/src/common/container.ts", "../utils/src/is-object.ts", "src/interfaces"],
   "exclude": [
     "./dist/**/*",
     "./src/**/__tests__",
