--- a/packages/plugins/resend/package.json
+++ b/packages/plugins/resend/package.json
@@ -2,9 +2,14 @@
    "name": "ocular-plugin-resend",
    "version": "1.1.0",
    "description": "Resend email plugin to send emails for Ocular using local Handlebars templates or local React templates",
-   "main": "index.js",
+   "main": "dist/index.js",
+   "types": "dist/index.d.ts",
    "author": "Louis Murerwa",
    "devDependencies": {
+      "@babel/cli": "^7.23.9",
+      "@babel/core": "^7.23.9",
+      "@babel/preset-env": "^7.23.9",
+      "@babel/preset-react": "^7.23.3",
       "cross-env": "^5.2.1",
       "typeorm": "^0.3.16",
       "typescript": "^4.9.5"
@@ -18,8 +23,10 @@
    "dependencies": {
       "@ocular-ai/core-backend": "file:../../core-backend",
       "@ocular-ai/types": "file:../../types",
+      "@ocular-ai/utils": "file:../../utils",
       "handlebars": "^4.7.8",
-      "resend": "^1.0.0",
+      "react-email": "^2.0.0",
+      "resend": "^1.1.0",
       "zod": "^3.22.2"
    }
 }
