--- a/packages/core-backend/.env
+++ b/packages/core-backend/.env
@@ -17,3 +17,8 @@ PINECONE_API_KEY="52a01c22-ed9b-44b2-ae07-19c36b6126ff"
 PINECONE_INDEX="semantic-search"
 PINECONE_CLOUD="aws"
 PINECONE_REGION="us-west-2"
+
+
+# App Client Details For Intergrations
+CLIENT_ID="ocular-dev"
+GITHUB_CLIENT_SECRET="ocular-dev"
