--- a/packages/apps/github/package.json
+++ b/packages/apps/github/package.json
@@ -15,7 +15,10 @@
   "author": "Louis Luxa Murerwa",
   "devDependencies": {},
   "dependencies": {
+    "@octokit/rest": "^20.0.2",
+    "@ocular-ai/core-backend": "file:../../core-backend",
     "@ocular-ai/types": "file:../../types",
+    "octokit": "^3.1.2",
     "tsc": "^2.0.4",
     "typeorm": "^0.3.20",
     "typescript": "^5.3.3"
