--- a/packages/apps/github/package.json
+++ b/packages/apps/github/package.json
@@ -6,23 +6,26 @@
   "types": "dist/index.d.ts",
   "author": "Louis Murerwa",
   "devDependencies": {
-     "@babel/cli": "^7.23.9",
-     "@babel/core": "^7.23.9",
-     "@babel/preset-env": "^7.23.9",
-     "@babel/preset-react": "^7.23.3",
-     "cross-env": "^5.2.1",
-     "typeorm": "^0.3.16",
-     "typescript": "^4.9.5"
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "cross-env": "^5.2.1",
+    "typeorm": "^0.3.16",
+    "typescript": "^4.9.5"
   },
   "scripts": {
-     "prepare": "cross-env NODE_ENV=production yarn run build",
-     "test": "jest --passWithNoTests src",
-     "build": "tsc",
-     "watch": "tsc --watch"
+    "prepare": "cross-env NODE_ENV=production yarn run build",
+    "test": "jest --passWithNoTests src",
+    "build": "tsc",
+    "watch": "tsc --watch"
   },
   "dependencies": {
-     "@ocular/ocular": "*",
-     "@ocular/types": "*",
-     "@ocular/utils": "*"
+    "@octokit/app": "^14.0.2",
+    "@octokit/auth-app": "^6.0.4",
+    "@ocular/ocular": "*",
+    "@ocular/types": "*",
+    "@ocular/utils": "*",
+    "octokit": "^3.1.2"
   }
 }
