--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "packageManager": "npm@6.14.15",
   "workspaces": [
-    "packages/*/*"
+    "packages/utils",
+    "packages/types",
+    "packages/ocular",
+    "packages/*/*/*"
   ],
   "scripts": {
     "build": "turbo run build",
