--- a/packages/apps/google-drive/package.json
+++ b/packages/apps/google-drive/package.json
@@ -16,7 +16,7 @@
      "typescript": "^4.9.5"
   },
   "scripts": {
-     "prepare": "cross-env NODE_ENV=production yarn run build",
+     "prepare": "cross-env NODE_ENV=production npm run build",
      "test": "jest --passWithNoTests src",
      "build": "tsc",
      "watch": "tsc --watch"
