--- a/packages/plugins/azure-open-ai/tsconfig.json
+++ b/packages/plugins/azure-open-ai/tsconfig.json
@@ -3,6 +3,7 @@
      "lib": ["es2020"],
      "target": "es2020",
      "outDir": "./dist",
+     "rootDir": "./src",
      "esModuleInterop": true,
      "declaration": false,
      "module": "commonjs",
