--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "npm": "^10.5.0"
+    "npm": "^10.5.0",
+    "randomatic": "^3.1.1"
   }
 }
