--- a/packages/plugins/ocular-resend/package.json
+++ b/packages/plugins/ocular-resend/package.json
@@ -11,11 +11,11 @@
       "@babel/preset-env": "^7.23.9",
       "@babel/preset-react": "^7.23.3",
       "cross-env": "^5.2.1",
-      "typeorm": "^0.3.16",
-      "typescript": "^4.9.5",
-      "resend": "^1.1.0",
       "handlebars": "^4.7.8",
-      "react-email": "^2.0.0"
+      "react-email": "^2.0.0",
+      "resend": "^1.1.0",
+      "typeorm": "^0.3.16",
+      "typescript": "^4.9.5"
    },
    "scripts": {
       "prepare": "cross-env NODE_ENV=production npm run build",
@@ -24,8 +24,11 @@
       "watch": "tsc --watch"
    },
    "dependencies": {
+      "@medusajs/utils": "^1.11.6",
       "@ocular/ocular": "*",
       "@ocular/types": "*",
-      "@ocular/utils": "*"
+      "@ocular/utils": "*",
+      "axios": "^1.6.8",
+      "scrypt-kdf": "^2.0.1"
    }
- }
+}
