--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
-    "npm": "^10.5.0"
+    "npm": "^10.5.0",
+    "scrypt-kdf": "^2.0.1"
   },
   "devDependencies": {
     "eslint-config-next": "^14.1.4"
