--- a/packages/ocular-ui/.eslintrc.json
+++ b/packages/ocular-ui/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "plugin:@nrwl/nx/react-typescript",
+    // "plugin:@nrwl/nx/react-typescript",
     "next",
     "next/core-web-vitals"
   ],
