--- a/packages/ocular-ui/package.json
+++ b/packages/ocular-ui/package.json
@@ -23,6 +23,7 @@
         "@babel/runtime": "^7.23.9",
         "@babel/runtime-corejs3": "^7.23.9",
         "@faker-js/faker": "^8.3.1",
+        "@fluentui/react": "^8.117.2",
         "@heroicons/react": "v1",
         "@hookform/resolvers": "^3.3.2",
         "@phosphor-icons/react": "^2.0.15",
