--- a/packages/plugins/azure-open-ai/package.json
+++ b/packages/plugins/azure-open-ai/package.json
@@ -20,6 +20,7 @@
       "@ocular/ocular": "*",
       "@ocular/types": "*",
       "@ocular/utils": "*",
-      "openai": "^4.29.2"
+      "openai": "^4.29.2",
+      "tiktoken": "^1.0.13"
    }
 }
