--- a/packages/ocular-ui/package.json
+++ b/packages/ocular-ui/package.json
@@ -43,6 +43,7 @@
         "@radix-ui/react-toast": "^1.1.5",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@supabase/ui": "^0.36.5",
+        "@tabler/icons-react": "^3.1.0",
         "@tanstack/react-query": "^4.24.10",
         "@tanstack/react-table": "^8.11.3",
         "@tremor/react": "^3.12.2",
