--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -10,6 +10,7 @@
   ],
   "author": "Louis Luxa Murerwa",
   "devDependencies": {
+    "@types/ora": "^3.2.0",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
@@ -30,10 +31,12 @@
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.36.1",
+    "cors": "^2.8.5",
     "express-session": "^1.18.0",
     "fs-exists-cached": "^1.0.0",
     "ioredis-mock": "^8.9.0",
     "morgan": "^1.10.0",
+    "ora": "^3.4.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
