--- a/packages/plugins/qdrant-vector-search-service/package.json
+++ b/packages/plugins/qdrant-vector-search-service/package.json
@@ -9,7 +9,8 @@
       "prepare": "cross-env NODE_ENV=production npm run build",
       "test": "jest --passWithNoTests src",
       "build": "tsc",
-      "watch": "tsc --watch"
+      "watch": "tsc --watch",
+      "clean": "rimraf dist node_modules"
    },
    "dependencies": {
       "@ocular/types": "*",
