--- a/packages/apps/github/package.json
+++ b/packages/apps/github/package.json
@@ -14,7 +14,8 @@
     "prepare": "cross-env NODE_ENV=production npm run build",
     "test": "jest --passWithNoTests src",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "clean": "rimraf dist node_modules"
   },
   "dependencies": {
     "@octokit/app": "^14.0.2",
