--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Ocular Types definition",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/OcularEngineering/OcularAI",
@@ -29,7 +29,8 @@
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
     "watch": "tsc --build --watch",
-    "test": "exit 0"
+    "test": "exit 0",
+    "clean": "rimraf dist node_modules"
   },
   "dependencies": {
     "@azure/search-documents": "^12.0.0",
