Add Docker Compose For Developers

--- a/env.local.example
+++ b/env.local.example
@@ -10,3 +10,13 @@ AZURE_OPEN_AI_CHAT_MODEL=
 # Apps Installed
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Asana
+ASANA_CLIENT_ID=
+ASANA_CLIENT_SECRET=
+
+# GitHub
+GITHUB_APP_ID=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_PRIVATE_KEY_PATH=
