--- a/packages/ocular/package.json
+++ b/packages/ocular/package.json
@@ -20,6 +20,7 @@
     "watch": "tsc --build --watch",
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "build": "rimraf dist && tsc --build",
+    "dev": "npm run build && NODE_ENV=development nodemon dist/ocular/src/main.js",
     "start": "npm run build && nodemon dist/ocular/src/main.js",
     "clean": "rimraf dist node_modules",
     "test": "jest --runInBand --bail --detectOpenHandles --forceExit",
